fixed positioning of star

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -290,11 +290,8 @@ input[type="text"] {
 #star{
   display: inline-block;
   font-size: medium;
+  line-height: medium;
   width: 1%;
-  i {
-    position: absolute;
-    top: 40%;
-  }
 }
 
 // $primary: ;
