removed non-grid styling from ascent battery gauges

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -154,10 +154,9 @@ table {
 }
 
 #gauge_3, #gauge_4 {
-  margin-top: 20px;
+  margin: 20px auto;
   display: block;
 }
-
 
 #gauge_1 {
   display: block;
