--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -57,12 +57,12 @@
               =f.text_area :body, id: "comment_body"
               =f.submit "Add", id: "comment-submit"
           #vertical-gauges
-            #vg-top
+            .col-1-2
               #gauge_7
-              #gauge_6
-            #vg-bottom
               #bat-info
                 #gauge_7_info
+            .col-1-2
+              #gauge_6
               #asc-info
                 #gauge_6_info
 
