--- a/app/assets/stylesheets/flights-show.css
+++ b/app/assets/stylesheets/flights-show.css
@@ -107,14 +107,14 @@
   width: 65%;
   border: 3px solid rgb(190,190,190);
   margin: 20px auto 5px;
-  background: #D1DBDD;
+  background: #B2B2C1;
   height: 55px;
 }
 #write-comments {
   width: 65%;
   border: 3px solid rgb(190,190,190);
   margin: 5px auto 10px;
-  background: #D1DBDD;
+  background: #B2B2C1;
   height: 55px;
 }
 #photos-div i {
@@ -159,7 +159,7 @@
   height: 100px;
   border: 2px solid rgb(190,190,190);
   margin: 0 auto;
-  background: #D1DBDD;
+  background: #B2B2C1;
 }
 #comment-input-box textarea {
   width: 80%;
