--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -41,22 +41,6 @@
           = render :partial => 'users/add_to_flight', :locals => { :user => @user }
       #flights
         -@user.flights.each do |flight|
-          .flight{:style => "background: url(#{image_path flight.album_cover}) no-repeat; background-size: cover;"}
+          .flight{:style => "background: url(#{image_path flight.cover_photo}) no-repeat; background-size: cover;"}
             %a{:href => "#{flight_path(flight)}"}
               .callsign="#{flight.callsign}"
-/ .profile_flights.col-1-3
-/   %h2="#{@user.username}'s flights"
-/   %br
-/   -@user.flights.each do |flight|
-/     .flight{:style => "background-image: url(#{image_path flight.album_cover})"}
-/       %a{:href => "#{flight_path(flight)}"}
-/         .callsign="#{flight.callsign}"
-/ -if current_user == @user
-/   .profile_forms
-/     .col-1-4
-/     .col-1-3.friendship_form
-/       %h3 Add a friend
-/       = render :partial => 'friendships/new', :locals => { :friendship => @friendship}
-/     .col-1-3.add_friend_to_flight_form
-/       %h3 Add a flight collaborator
-/       = render :partial => 'users/add_to_flight', :locals => { :user => @user }
